plugins {
    java
    `maven-publish`
}

subprojects {
    apply(plugin = "maven-publish")
    apply(plugin = "jvm-test-suite")
    apply(plugin = "java")

    group = "com.github.kjetilv.uplift"
    version = "0.1.1-SNAPSHOT"

    repositories {
        mavenLocal()
        mavenCentral()
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/kjetilv/uplift")
            credentials {
                username = resolveProperty("githubUser", "GITHUB_ACTOR")
                password = resolveProperty("githubToken", "GITHUB_TOKEN")
            }
        }
    }

    java {
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(25))
        }
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_25
        targetCompatibility = JavaVersion.VERSION_25
    }

    tasks.test {
        useJUnitPlatform()
        jvmArgs("--enable-preview", "--add-modules", "jdk.incubator.vector")
    }

    tasks.withType<JavaCompile>().all {
        options.compilerArgs.addAll(listOf("--enable-preview", "--add-modules", "jdk.incubator.vector"))
    }

    dependencies {
        testImplementation(platform("org.junit:junit-bom:6.0.3"))

        testImplementation("org.junit.jupiter:junit-jupiter-api")
        testImplementation("org.junit.jupiter:junit-jupiter")

        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
        testRuntimeOnly("org.junit.platform:junit-platform-launcher")

        testImplementation("org.assertj:assertj-core:3.27.7")
    }

    if (project.name in listOf(
            "gradle-plugins",
            "synchttp",
            "edam",
            "edamame",
            "flambda",
            "flogs",
            "hash",
            "json",
            "json-anno",
            "json-gen",
            "json-mame",
            "kernel",
            "lambda",
            "s3",
            "util",
            "uuid",
        ).map { "uplift-$it" }
    ) {
        logger.info("Configuring ${project.name} for publishing")

        java {
            toolchain {
                languageVersion.set(JavaLanguageVersion.of(25))
                nativeImageCapable = true
            }
            sourceCompatibility = JavaVersion.VERSION_25
            targetCompatibility = JavaVersion.VERSION_25
            withSourcesJar()
        }
    }

    if (project.name in listOf(
            "gradle-plugins",
            "synchttp",
            "edam",
            "edamame",
            "flambda",
            "flogs",
            "hash",
            "json",
            "json-anno",
            "json-gen",
            "json-mame",
            "kernel",
            "lambda",
            "s3",
            "util",
            "uuid",
        ).map { "uplift-$it" }
    ) {
        publishing {
            repositories {
                mavenLocal()
                maven {
                    name = "GitHubPackages"
                    url = uri("https://maven.pkg.github.com/kjetilv/uplift")
                    credentials {
                        username = resolveProperty("githubUser", "GITHUB_ACTOR")
                        password = resolveProperty("githubToken", "GITHUB_TOKEN")
                    }
                }
            }

            publications {
                register<MavenPublication>("upliftPublication") {
                    suppressAllPomMetadataWarnings()
                    pom {
                        name = "uplift"
                        description = "Uplift"
                        url = "https://github.com/kjetilv/uplift"
                        licenses {
                            license {
                                name = "GNU General Public License v3.0"
                                url = "https://raw.githubusercontent.com/kjetilv/uplift/refs/heads/main/LICENSE"
                            }
                        }
                        scm {
                            connection = "scm:git:https://github.com/kjetilv/uplift"
                            developerConnection = "scm:git:https://github.com/kjetilv/uplift"
                            url = "https://github.com/kjetilv/uplift"
                        }
                    }
                    from(components["java"])
                }
            }
        }
    }
}

fun resolveProperty(property: String, variable: String? = null, defValue: String? = null) =
    System.getProperty(property)
        ?: variable?.let(System::getenv)
        ?: project.property(property)?.toString()
        ?: defValue
        ?: throw IllegalStateException("No variable $property found, no default value provided")
